--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "cors": "^2.8.5",
+    "cron": "^3.1.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/cron": "^2.4.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
