--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
+    "uuid": "^9.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.6",
     "@types/pg": "^8.10.9",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
