--- a/backend/package.json
+++ b/backend/package.json
@@ -13,27 +13,39 @@
     "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:unit": "jest --testPathPattern=tests/unit",
+    "test:integration": "jest --testPathPattern=tests/integration",
     "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --maxWorkers=2",
     "migrate:create": "node-pg-migrate create",
     "migrate:up": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down",
-    "migrate:status": "node-pg-migrate status"
+    "migrate:status": "node-pg-migrate status",
+    "db:test:setup": "tsx tests/db/setup.ts",
+    "db:test:reset": "tsx tests/db/reset.ts",
+    "db:test:seed": "tsx tests/db/seed.ts",
+    "audit:cleanup": "tsx src/scripts/cleanup-audit-logs.ts"
   },
   "keywords": [
     "hubzone",
     "certification",
     "sba",
     "typescript",
-    "express"
+    "express",
+    "security"
   ],
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cron": "^3.1.6",
+    "dompurify": "^3.0.8",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "jsdom": "^24.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
@@ -41,14 +53,18 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/cron": "^2.4.0",
+    "@types/dompurify": "^3.0.5",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/jsdom": "^21.1.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.6",
     "@types/pg": "^8.10.9",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
@@ -58,6 +74,7 @@
     "jest": "^29.7.0",
     "node-pg-migrate": "^6.2.2",
     "prettier": "^3.1.1",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
