--- a/backend/package.json
+++ b/backend/package.json
@@ -1,86 +1,75 @@
 {
   "name": "hz-navigator-backend",
   "version": "1.0.0",
-  "description": "HZ Navigator API - HUBZone Certification Platform Backend",
+  "description": "HZ Navigator Backend API",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc",
     "start": "node dist/index.js",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "typecheck": "tsc --noEmit",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "tsc",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
+    "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:unit": "jest --testPathPattern=tests/unit",
-    "test:integration": "jest --testPathPattern=tests/integration",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --maxWorkers=2",
+    "test:integration": "jest --config jest.integration.config.js",
     "migrate:create": "node-pg-migrate create",
     "migrate:up": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down",
     "migrate:status": "node-pg-migrate status",
-    "db:test:setup": "tsx tests/db/setup.ts",
-    "db:test:reset": "tsx tests/db/reset.ts",
-    "db:test:seed": "tsx tests/db/seed.ts",
-    "audit:cleanup": "tsx src/scripts/cleanup-audit-logs.ts"
+    "migrate:redo": "node-pg-migrate down && node-pg-migrate up",
+    "db:seed": "ts-node src/scripts/seed.ts",
+    "db:reset": "ts-node src/scripts/reset.ts"
   },
-  "keywords": [
-    "hubzone",
-    "certification",
-    "sba",
-    "typescript",
-    "express",
-    "security"
-  ],
-  "author": "",
-  "license": "UNLICENSED",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.450.0",
+    "@aws-sdk/client-secrets-manager": "^3.450.0",
+    "@aws-sdk/client-ses": "^3.450.0",
+    "@aws-sdk/client-textract": "^3.450.0",
+    "@aws-sdk/s3-presigned-post": "^3.450.0",
+    "@sentry/node": "^7.80.0",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "cron": "^3.1.6",
-    "dompurify": "^3.0.8",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
-    "jsdom": "^24.0.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
+    "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3",
-    "uuid": "^9.0.0",
+    "pino": "^8.16.2",
+    "uuid": "^9.0.1",
+    "xss": "^1.0.14",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/cron": "^2.4.0",
-    "@types/dompurify": "^3.0.5",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.11",
-    "@types/jsdom": "^21.1.6",
+    "@types/jest": "^29.5.10",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^20.10.6",
+    "@types/node": "^20.10.0",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.10.9",
-    "@types/supertest": "^6.0.2",
-    "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
+    "@types/supertest": "^2.0.16",
+    "@types/uuid": "^9.0.6",
+    "@typescript-eslint/eslint-plugin": "^6.13.0",
+    "@typescript-eslint/parser": "^6.13.0",
+    "eslint": "^8.54.0",
     "jest": "^29.7.0",
-    "node-pg-migrate": "^6.2.2",
-    "prettier": "^3.1.1",
-    "supertest": "^6.3.4",
+    "pino-pretty": "^10.2.3",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.2"
   },
   "engines": {
     "node": ">=18.0.0"
   }
 }
-
