--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -84,7 +84,10 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
+          cache-dependency-path: 
+            
+            
+            backend/package-lock.json
 
       - name: Install dependencies
         working-directory: backend
