fix: add ESLint configs and fix type-check script name
- Add frontend/.eslintrc.cjs with React/TypeScript rules
- Simplify backend/.eslintrc.js to use only installed plugins
- Fix frontend workflow to use 'typecheck' instead of 'type-check'

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -68,7 +68,7 @@ jobs:
 
       - name: Run type check
         working-directory: frontend
-        run: npm run type-check || true
+        run: npm run typecheck || true
 
       - name: Run unit tests
         working-directory: frontend
