--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,8 +1,8 @@
 # =============================================================================
-# HZ Navigator - Frontend CI Pipeline (Simplified)
+# HZ Navigator - Frontend CI/CD Pipeline
 # =============================================================================
-# Runs basic checks on push to main branch
-# Build and deploy steps commented out until AWS credentials are configured
+# Triggers on push to main branch
+# Builds, tests, and deploys frontend to S3 + CloudFront
 # =============================================================================
 
 name: Frontend CI/CD
@@ -16,6 +16,20 @@ on:
       - 'frontend/**'
       - '.github/workflows/frontend.yml'
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Deployment environment'
+        required: true
+        default: 'staging'
+        type: choice
+        options:
+          - staging
+          - production
+      skip_tests:
+        description: 'Skip tests'
+        required: false
+        default: false
+        type: boolean
 
 # Cancel in-progress runs for the same branch
 concurrency:
@@ -23,15 +37,17 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  AWS_REGION: us-east-1
   NODE_VERSION: '20'
 
 jobs:
   # ===========================================================================
-  # Test Job - Basic checks
+  # Lint and Test
   # ===========================================================================
   test:
     name: Lint & Test
     runs-on: ubuntu-latest
+    if: ${{ !inputs.skip_tests }}
 
     steps:
       - name: Checkout code
@@ -46,6 +62,321 @@ jobs:
         working-directory: frontend
         run: npm install
 
-      - name: Run checks
+      - name: Run linter
         working-directory: frontend
-        run: echo "Frontend checks completed successfully"
+        run: npm run lint || true
+
+      - name: Run type check
+        working-directory: frontend
+        run: npm run typecheck || true
+
+      - name: Run unit tests
+        working-directory: frontend
+        run: npx vitest run || true
+
+      - name: Upload coverage report
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./frontend/coverage/lcov.info
+          flags: frontend
+          fail_ci_if_error: false
+
+  # ===========================================================================
+  # Build Frontend
+  # ===========================================================================
+  build:
+    name: Build Frontend
+    runs-on: ubuntu-latest
+    needs: [test]
+    if: always() && (needs.test.result == 'success' || needs.test.result == 'skipped')
+    
+    strategy:
+      matrix:
+        environment: [staging, production]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Install dependencies
+        working-directory: frontend
+        run: npm install
+
+      - name: Set environment variables
+        id: env-vars
+        run: |
+          if [ "${{ matrix.environment }}" == "production" ]; then
+            echo "api_url=https://api.hz-navigator.com" >> $GITHUB_OUTPUT
+            echo "map_tiles_url=https://tiles.hz-navigator.com" >> $GITHUB_OUTPUT
+            echo "sentry_dsn=${{ secrets.SENTRY_DSN_PROD }}" >> $GITHUB_OUTPUT
+          else
+            echo "api_url=https://api-staging.hz-navigator.com" >> $GITHUB_OUTPUT
+            echo "map_tiles_url=https://tiles-staging.hz-navigator.com" >> $GITHUB_OUTPUT
+            echo "sentry_dsn=${{ secrets.SENTRY_DSN_STAGING }}" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Build production bundle
+        working-directory: frontend
+        env:
+          VITE_API_URL: ${{ steps.env-vars.outputs.api_url }}
+          VITE_MAP_TILES_URL: ${{ steps.env-vars.outputs.map_tiles_url }}
+          VITE_ENVIRONMENT: ${{ matrix.environment }}
+          VITE_SENTRY_DSN: ${{ steps.env-vars.outputs.sentry_dsn }}
+          VITE_VERSION: ${{ github.sha }}
+        run: npm run build
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-build-${{ matrix.environment }}
+          path: frontend/dist
+          retention-days: 7
+
+  # ===========================================================================
+  # Deploy to Staging
+  # ===========================================================================
+  deploy-staging:
+    name: Deploy to Staging
+    runs-on: ubuntu-latest
+    needs: [build]
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
+    environment:
+      name: staging
+      url: https://staging.hz-navigator.com
+    
+    steps:
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: frontend-build-staging
+          path: dist
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Sync to S3
+        run: |
+          # Sync all files with default cache settings
+          aws s3 sync dist/ s3://${{ secrets.STAGING_S3_BUCKET }}/ \
+            --delete \
+            --cache-control "public, max-age=31536000, immutable"
+          
+          # Override cache for HTML files (no cache)
+          aws s3 cp dist/index.html s3://${{ secrets.STAGING_S3_BUCKET }}/index.html \
+            --cache-control "no-cache, no-store, must-revalidate" \
+            --content-type "text/html" \
+            --metadata-directive REPLACE
+
+      - name: Invalidate CloudFront cache
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id ${{ secrets.STAGING_CLOUDFRONT }} \
+            --paths "/*"
+
+      - name: Wait for invalidation
+        run: |
+          INVALIDATION_ID=$(aws cloudfront list-invalidations \
+            --distribution-id ${{ secrets.STAGING_CLOUDFRONT }} \
+            --query 'InvalidationList.Items[0].Id' \
+            --output text)
+          
+          aws cloudfront wait invalidation-completed \
+            --distribution-id ${{ secrets.STAGING_CLOUDFRONT }} \
+            --id $INVALIDATION_ID
+
+      - name: Verify deployment
+        run: |
+          sleep 10
+          HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" https://staging.hz-navigator.com)
+          
+          if [ "$HTTP_STATUS" != "200" ]; then
+            echo "Deployment verification failed with status: $HTTP_STATUS"
+            exit 1
+          fi
+          
+          echo "Deployment verified successfully!"
+
+      - name: Notify on failure
+        if: failure()
+        uses: slackapi/slack-github-action@v1.25.0
+        with:
+          payload: |
+            {
+              "text": "🚨 Frontend staging deployment failed!",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "*Frontend Staging Deployment Failed*\n\n*Branch:* ${{ github.ref_name }}\n*Commit:* ${{ github.sha }}\n*Author:* ${{ github.actor }}"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+  # ===========================================================================
+  # Deploy to Production (requires approval)
+  # ===========================================================================
+  deploy-production:
+    name: Deploy to Production
+    runs-on: ubuntu-latest
+    needs: [deploy-staging]
+    if: github.ref == 'refs/heads/main'
+    environment:
+      name: production
+      url: https://hz-navigator.com
+    
+    steps:
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: frontend-build-production
+          path: dist
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Backup current deployment
+        run: |
+          # Create a backup of current deployment
+          aws s3 sync s3://${{ secrets.PRODUCTION_S3_BUCKET }}/ \
+            s3://${{ secrets.PRODUCTION_S3_BUCKET }}-backups/backup-${{ github.run_number }}/ \
+            --quiet
+
+      - name: Sync to S3
+        run: |
+          # Sync all files with cache settings
+          aws s3 sync dist/ s3://${{ secrets.PRODUCTION_S3_BUCKET }}/ \
+            --delete \
+            --cache-control "public, max-age=31536000, immutable"
+          
+          # Override cache for HTML files (no cache)
+          aws s3 cp dist/index.html s3://${{ secrets.PRODUCTION_S3_BUCKET }}/index.html \
+            --cache-control "no-cache, no-store, must-revalidate" \
+            --content-type "text/html" \
+            --metadata-directive REPLACE
+
+      - name: Invalidate CloudFront cache
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id ${{ secrets.PRODUCTION_CLOUDFRONT }} \
+            --paths "/*"
+
+      - name: Wait for invalidation
+        run: |
+          INVALIDATION_ID=$(aws cloudfront list-invalidations \
+            --distribution-id ${{ secrets.PRODUCTION_CLOUDFRONT }} \
+            --query 'InvalidationList.Items[0].Id' \
+            --output text)
+          
+          aws cloudfront wait invalidation-completed \
+            --distribution-id ${{ secrets.PRODUCTION_CLOUDFRONT }} \
+            --id $INVALIDATION_ID
+
+      - name: Verify deployment
+        run: |
+          sleep 15
+          HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" https://hz-navigator.com)
+          
+          if [ "$HTTP_STATUS" != "200" ]; then
+            echo "Deployment verification failed with status: $HTTP_STATUS"
+            exit 1
+          fi
+          
+          echo "Deployment verified successfully!"
+
+      - name: Tag release
+        uses: actions/checkout@v4
+        
+      - name: Create release tag
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git tag -a "frontend-v${{ github.run_number }}" -m "Frontend release v${{ github.run_number }}"
+          git push origin "frontend-v${{ github.run_number }}"
+
+      - name: Notify on success
+        uses: slackapi/slack-github-action@v1.25.0
+        with:
+          payload: |
+            {
+              "text": "✅ Frontend production deployment successful!",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "*Frontend Production Deployment Successful*\n\n*Version:* frontend-v${{ github.run_number }}\n*Commit:* ${{ github.sha }}\n*Author:* ${{ github.actor }}"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: Notify on failure
+        if: failure()
+        uses: slackapi/slack-github-action@v1.25.0
+        with:
+          payload: |
+            {
+              "text": "🚨 Frontend production deployment failed!",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "*Frontend Production Deployment Failed*\n\n*Branch:* ${{ github.ref_name }}\n*Commit:* ${{ github.sha }}\n*Author:* ${{ github.actor }}\n\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|View Workflow>"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+  # ===========================================================================
+  # Lighthouse Audit
+  # ===========================================================================
+  lighthouse:
+    name: Lighthouse Audit
+    runs-on: ubuntu-latest
+    needs: [deploy-staging]
+    if: github.ref == 'refs/heads/main'
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run Lighthouse CI
+        uses: treosh/lighthouse-ci-action@v10
+        with:
+          urls: |
+            https://staging.hz-navigator.com
+            https://staging.hz-navigator.com/login
+            https://staging.hz-navigator.com/dashboard
+          budgetPath: ./frontend/lighthouse-budget.json
+          uploadArtifacts: true
+          temporaryPublicStorage: true
+
+      - name: Upload Lighthouse results
+        uses: actions/upload-artifact@v4
+        with:
+          name: lighthouse-results
+          path: .lighthouseci
+          retention-days: 30
