--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "description": "HZ Navigator Frontend - HUBZone Certification Platform UI",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
@@ -19,11 +19,16 @@
     "test:ci": "vitest run --coverage --reporter=json --outputFile=test-results.json"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@sentry/react": "^7.80.0",
+    "@sentry/tracing": "^7.80.0",
     "axios": "^1.6.3",
     "clsx": "^2.1.0",
+    "lucide-react": "^0.294.0",
     "mapbox-gl": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.0",
     "react-router-dom": "^6.21.1",
     "recharts": "^2.10.3",
     "zod": "^3.22.4"
