--- a/backend/package.json
+++ b/backend/package.json
@@ -50,12 +50,18 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.16",
+    "@types/cron": "^2.0.1",
+    "@types/dompurify": "^3.0.5",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.10",
+    "@types/jsdom": "^27.0.0",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^20.10.0",
     "@types/node-cron": "^3.0.11",
+    "@types/pdfkit": "^0.17.4",
     "@types/pg": "^8.10.9",
+    "@types/qrcode": "^1.5.6",
     "@types/supertest": "^2.0.16",
     "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
